fix(front): #2961.15 image issues
- One-Shot banner is not showing, wrong path so i fixed it
- The padding in the first image of the carousel for Continuous Hacking
is different from the design


Former-commit-id: 722fe0221db6880abaadca0054427063fcf26e6b

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -111,7 +111,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .banner-bg { background-image: url('../../images/cover-main.png'); }
 .asap-bg { background-image: url('../../images/background-asap.png'); height: 25rem; }
 .continuous-bg { background-image: url('../../images/use-cases/continuous/main-continuous-hacking.png'); }
-.one-shot-bg { background-image: url('../../images/use-cases/continuous/main-one-shot.png'); }
+.one-shot-bg { background-image: url('../../images/use-cases/one-shot/main-one-shot.png'); }
 .products-bg { background-image: url('../../images/products/products-cover.png'); }
 .integrates-bg { background-image: url('../../images/products/integrates/integrates-cover.png'); }
 .b-max { font-weight: 999; }
